llvm-spirv/test/negative/spirv-unknown-extensions.spt
119734787 65536 393230 16 0
2 Capability Addresses
2 Capability Linkage
2 Capability Kernel
2 Extension "unknown_spirv_extension"
5 ExtInstImport 1 "OpenCL.std"
3 MemoryModel 2 2
3 Source 3 200000
3 Name 4 "foo"
4 Name 5 "entry"
4 Name 11 "agg1"
3 Name 12 "bar"
4 Name 13 "entry"
4 Name 14 "agg2"
5 Decorate 4 LinkageAttributes "foo" Export
5 Decorate 12 LinkageAttributes "bar" Export
4 TypeInt 7 32 0
4 Constant 7 10 1
2 TypeVoid 2
3 TypeFunction 3 2
3 TypeFloat 8 32
4 TypeStruct 6 7 8

5 Function 2 4 0 3

2 Label 5
3 Undef 6 9
6 CompositeInsert 6 11 10 9 0
1 Return

1 FunctionEnd

5 Function 2 12 0 3

2 Label 13
3 Undef 6 15
6 CompositeInsert 6 14 10 15 0
1 Return

1 FunctionEnd

; RUN: not llvm-spirv %s -to-binary -o - 2>&1 | FileCheck %s
; CHECK: input SPIR-V module uses unknown extension 'unknown_spirv_extension'

